# jwm-settings-manager

./: CMakeLists.txt  jsm-2.project
data/: CMakeLists.txt  desktop-file-editor.desktop  jwm-settings-manager-autostart.desktop  jwm-settings-manager-desktop.desktop  jwm-settings-manager-fonts.desktop  jwm-settings-manager-icons.desktop  jwm-settings-manager-keyboard.desktop  jwm-settings-manager-mouse.desktop  jwm-settings-manager-panel.desktop  jwm-settings-manager-themes.desktop  jwm-settings-manager-window.desktop  jwm-settings-manager.desktop
data/themes/: CMakeLists.txt
data/themes/Ambiance/: Makefile
data/themes/Bassem/: CMakeLists.txt  Makefile
data/themes/DarkGnome2/: Makefile
data/themes/LightGnome2/: CMakeLists.txt
data/themes/Numix/: CMakeLists.txt  Makefile
fltk/: jwm-keyboard.cxx  jwm-keyboard.fld  jwm-keyboard.h  jwm-mouse.cxx  jwm-mouse.fld  jwm-mouse.h
